Fixed newlines not showing in chat messages

--- a/src/app/chat/chat-message/chat-message.component.scss
+++ b/src/app/chat/chat-message/chat-message.component.scss
@@ -3,6 +3,10 @@
 
 $indent: 8%;
 
+.message {
+    white-space: pre-line;
+}
+
 .options {
     position: relative;
     opacity: 0.7;
